// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"func increment by one" : {"PORT": 8080} 1`] = `
Object {
  "PORT": 8081,
}
`;

exports[`"func throw error with message test" : {"PORT": 8080} 1`] = `[Error: test]`;

exports[`"property absent, but requested" : {} 1`] = `[ReferenceError: zealit: property 'PORT' is nonexistent]`;

exports[`"property absent, default set" : {} 1`] = `
Object {
  "PORT": 8080,
}
`;

exports[`"property present" : {"PORT": 8080} 1`] = `
Object {
  "PORT": 8080,
}
`;

exports[`"property required but not present" : {} 1`] = `[Error: environment property PORT was not found and has no default]`;
